manifests/platform/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ext-ingress
  namespace: platform
spec:
  ingressClassName: gce
  rules:
  - host: "alpha.example.com"
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: alpha-nginx
            port:
              number: 8080
  - host: "beta.example.com"
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: beta-nginx
            port:
              number: 8080
---
# ExternalName services to reference team services cross-namespace
apiVersion: v1
kind: Service
metadata:
  name: alpha-nginx
  namespace: platform
spec:
  type: ExternalName
  externalName: nginx.alpha.svc.cluster.local
  ports:
  - port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: beta-nginx
  namespace: platform
spec:
  type: ExternalName
  externalName: nginx.beta.svc.cluster.local
  ports:
  - port: 8080
